# tapf-turtle

./: README.md  stack.yaml  tapf-turtle.cabal
demo/: Main.hs
src/TAPF/: Turtle.hs
src/TAPF/Turtle/: Deep.hs  Shallow.hs  ShallowIORefs.hs
